# oxibonsai

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md
.todos/: agent_errors.jsonl  config.json  (+2 more)
crates/oxibonsai/: Cargo.toml  README.md
crates/oxibonsai-core/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-core/src/: config.rs  error.rs  lib.rs  quant_k.rs
crates/oxibonsai-core/src/gguf/: compat.rs  streaming.rs  tensor_info.rs  types.rs  writer.rs
crates/oxibonsai-core/tests/: fuzz_gguf.rs  gguf_compat_tests.rs  gguf_edge_cases.rs  gguf_writer_tests.rs  model_card_tests.rs  quant_k_tests.rs  streaming_gguf_tests.rs  tensor_property.rs
crates/oxibonsai-eval/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-eval/benches/: eval_bench.rs
crates/oxibonsai-eval/src/: accuracy.rs  dataset.rs  error.rs  lib.rs
crates/oxibonsai-eval/tests/: bleu_tests.rs  bootstrap_tests.rs  calibration_tests.rs  chrf_tests.rs  meteor_tests.rs  property_tests.rs  qa_tests.rs  rouge_tests.rs  streaming_tests.rs
crates/oxibonsai-kernels/: Cargo.toml  README.md  TODO.md  build.rs
crates/oxibonsai-kernels/benches/: kernel_benchmarks.rs
crates/oxibonsai-kernels/examples/: gemv_benchmark.rs
crates/oxibonsai-kernels/src/: aligned.rs  dequant.rs  dequant_ternary.rs  dispatch.rs  error.rs  gemm.rs  gemm_ternary.rs  gemv.rs  gemv_ternary.rs  lib.rs  packing.rs  parallel.rs  parallel_tiled.rs  prefetch.rs  simd_avx2.rs  simd_avx512.rs  simd_neon.rs  tiled.rs  traits.rs
crates/oxibonsai-kernels/src/gpu_backend/: cuda_attn_kernels.rs  cuda_full_layer.rs  cuda_graph.rs  cuda_kernels.rs  cuda_prefill.rs  cuda_prefill_kernels.rs  metal_dispatch.rs  metal_full_layer.rs  metal_graph.rs  metal_prefill.rs  mod.rs  scirs2_backend.rs
crates/oxibonsai-kernels/tests/: cross_tier.rs  edge_cases.rs  error_handling.rs  fuzz_kernels.rs  gpu_backend_tests.rs  proptest_kernels.rs  tuning_tests.rs
crates/oxibonsai-model/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-model/examples/: gguf_dump.rs  onnx_convert.rs  onnx_inspect.rs
crates/oxibonsai-model/src/: block.rs  compression.rs  disk_cache.rs  error.rs  export.rs  gguf_loader.rs  kv_cache.rs  kv_cache_quant.rs  lib.rs  lora.rs  model.rs  model_config_builder.rs  model_merge.rs  model_registry.rs  model_variants.rs  paged_kv_cache.rs  pipeline_parallel.rs  prefix_cache.rs  quantize_ternary.rs  tensor_parallel.rs
crates/oxibonsai-model/src/block/: functions.rs  mod.rs  types.rs
crates/oxibonsai-model/src/convert/: common.rs  mod.rs
crates/oxibonsai-model/tests/: attention_sink_tests.rs  attention_tests.rs  calibration_tests.rs  checkpoint_tests.rs  chunked_prefill_tests.rs  compression_tests.rs  cross_attention_tests.rs  cuda_inference_tests.rs  disk_cache_tests.rs  dynamic_quant_tests.rs  flash_decode_tests.rs  gguf_loader_tests.rs  gradient_checkpoint_tests.rs  kv_cache_fp16_test.rs  kv_cache_quant_tests.rs  layer_correctness_tests.rs  layer_tests.rs  losses_tests.rs  lr_scheduler_tests.rs  mod_tests.rs  model_forward.rs  model_merge_tests.rs  multi_gpu_tests.rs  numerical_stability_tests.rs  paged_kv_cache_tests.rs  pruning_tests.rs  quantization_tests.rs  rope_scaling_tests.rs  sparse_attention_tests.rs  ternary_integration.rs  weight_tying_tests.rs  yarn_rope_tests.rs
crates/oxibonsai-rag/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-rag/benches/: rag_bench.rs
crates/oxibonsai-rag/src/: chunker.rs  embedding.rs  error.rs  lib.rs  metadata_filter.rs  persistence.rs  pipeline.rs  retriever.rs  tests.rs  vector_store.rs
crates/oxibonsai-rag/tests/: advanced_chunker_tests.rs  code_chunker_tests.rs  distance_tests.rs  metadata_filter_tests.rs  persistence_tests.rs  property_tests.rs  semantic_chunker_tests.rs
crates/oxibonsai-runtime/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-runtime/assets/: chat.html
crates/oxibonsai-runtime/src/: admin.rs  api_extensions.rs  api_types.rs  async_engine.rs  auto_tuner.rs  batch_engine.rs  beam_search.rs  builders.rs  circuit_breaker.rs  completions.rs  config.rs  constrained_decoding.rs  context_manager.rs  continuous_batch.rs  convenience.rs  dedup.rs  distributed.rs  embedding_index.rs  embeddings.rs  engine.rs  error.rs  hot_reload.rs  lib.rs  memory.rs  metrics.rs  middleware.rs  model_cache.rs  multi_model.rs  native_tokenizer.rs  pipeline.rs  prefix_cache_engine.rs  presets.rs  profiler.rs  rag_server.rs  rate_limiter.rs  request_queue.rs  sampling.rs  sampling_advanced.rs  semantic_cache.rs  server.rs  (+7 more)
crates/oxibonsai-runtime/tests/: adaptive_sampling_tests.rs  admin_tests.rs  api_extensions_tests.rs  auto_tuner_tests.rs  builders_test.rs  circuit_breaker_test.rs  completions_tests.rs  config_tests.rs  constrained_decoding_tests.rs  dedup_tests.rs  distributed_tests.rs  embeddings_tests.rs  generate_pipeline_tests.rs  health_test.rs  hot_reload_tests.rs  json_schema_tests.rs  multi_model_tests.rs  native_tokenizer_tests.rs  nbest_tests.rs  profiler_tests.rs  quality_metrics_tests.rs  rag_server_tests.rs  sampling_advanced_tests.rs  sampling_distribution_tests.rs  sampling_tests.rs  server_tests.rs  stream_metrics_tests.rs  token_budget_tests.rs  web_ui_tests.rs
crates/oxibonsai-serve/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-serve/examples/: server_config.toml
crates/oxibonsai-serve/src/: args.rs  banner.rs  config.rs  env.rs  lib.rs  main.rs  metrics.rs
crates/oxibonsai-serve/tests/: args_tests.rs  config_tests.rs  env_tests.rs  metrics_tests.rs  property_tests.rs  server_integration_tests.rs  validation_tests.rs
crates/oxibonsai-tokenizer/: Cargo.toml  README.md  TODO.md
crates/oxibonsai-tokenizer/benches/: tokenizer_bench.rs
crates/oxibonsai-tokenizer/src/: bpe.rs  chat_templates.rs  error.rs  hf_format.rs  lib.rs  serialization.rs  streaming.rs  tests.rs  tokenizer.rs  trainer.rs  utils.rs  vocab.rs
crates/oxibonsai-tokenizer/tests/: chat_template_tests.rs  hf_format_tests.rs  property_tests.rs  serialization_tests.rs  streaming_tests.rs  trainer_tests.rs  unicode_edge_tests.rs
crates/oxibonsai/src/: lib.rs
(+111 files in other folders)
