[package]
name = "oxibonsai-kernels"
description = "1-bit Q1_0_g128 compute kernels (dequant, GEMV, GEMM) for OxiBonsai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxibonsai-kernels"
readme = "README.md"
keywords = ["simd", "1-bit", "kernels", "gemv", "avx2"]
categories = ["science", "algorithms"]

[features]
default = []
simd-avx2 = []
simd-avx512 = []
simd-neon = []
nightly = []  # Enable nightly intrinsics (prefetch) — only useful on nightly toolchain
wasm = []
cuda = ["gpu", "scirs2-core/gpu", "scirs2-core/cuda"]
native-cuda = ["gpu", "dep:cudarc"]
metal = ["gpu", "scirs2-core/gpu", "scirs2-core/metal", "dep:metal", "dep:objc"]
gpu = ["scirs2-core/gpu"]
avx2 = []
neon = []

[dependencies]
oxibonsai-core.workspace = true
scirs2-core = { workspace = true, features = ["simd", "std"] }
half.workspace = true
thiserror.workspace = true
tracing.workspace = true
cudarc = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true, optional = true }
objc = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "kernel_benchmarks"
harness = false

[[example]]
name = "gemv_benchmark"
path = "examples/gemv_benchmark.rs"
required-features = ["metal"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']
