[package]
name = "oxibonsai-model"
description = "Qwen3-8B Transformer implementation for OxiBonsai 1-bit inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxibonsai-model"
readme = "README.md"
keywords = ["transformer", "qwen3", "kv-cache", "llm", "inference"]
categories = ["science", "algorithms"]

[features]
wasm = []
metal = ["oxibonsai-kernels/metal"]
native-cuda = ["oxibonsai-kernels/native-cuda"]

[dependencies]
oxibonsai-core.workspace = true
oxibonsai-kernels.workspace = true
half.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
safetensors.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
