[package]
name = "oxibonsai-rag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oxibonsai-rag"
description = "Pure Rust RAG pipeline for OxiBonsai"
keywords = ["rag", "retrieval", "llm", "embeddings", "vector-search"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
oxibonsai-core = { path = "../oxibonsai-core", version = "0.1.0" }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
